fix safari on mobile issue

--- a/client/src/components/layout/index.css
+++ b/client/src/components/layout/index.css
@@ -39,8 +39,8 @@ main {
     justify-content: flex-start;
     align-items: center;
     width: 100vw;
-    max-height: 100vh;
     flex-wrap: wrap;
+    height: inherit;
 }
 
 .layout {
@@ -50,6 +50,6 @@ main {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    height: 100vh;
+    height: 100%;
     max-height: 100vh;
 }
