--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,6 +10,12 @@ body {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    min-height: -webkit-fill-available;
+    height: 100vh;
+}
+
+#root {
+    min-height: -webkit-fill-available;
     height: 100vh;
 }
 
